# year-grid-calendar

./: .dockerignore  .gitignore  Caddyfile  DEPLOYMENT.md  DEPLOY_DIGITALOCEAN.md  Dockerfile.do  QUICKSTART.md  README.md  SECURITY.md  STRUCTURE.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  update-do-app.sh
.do/: DEPLOY_WITHOUT_GITHUB.md  GITHUB_AUTH.md  app-no-github.yaml  app.yaml
doc/: BUGFIX.md  CHANGES.txt  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FIX.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_STEPS.txt  DEPLOY_DROPLET.md  FIXES.md  LOCAL_DEV.md  README_WEB.md  SEO_IMPROVEMENTS.md  SEO_QUICK_REFERENCE.md  SUMMARY.md
fonts/: README.md  download_fonts.sh
scripts/: deploy-do.sh  deploy-dockerhub.sh  docker-debug.sh  inspect-image.sh  quick-fix.sh  rebuild-and-push.sh  rebuild-push-do.sh
src/: calendar_core.py
utils/: deploy-dockerhub.sh  deploy-droplet.sh  deploy.sh
web/: Dockerfile  app.py
web/static/: README.md  generate-icons.py  manifest.json
