[project]
name = "year-grid-calendar"
version = "0.1.0"
description = "Year grid calendar"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=4.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
icons = [
    "Pillow>=10.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
